# lang_chain

./: README.md  main.py  pyproject.toml
module-1/: 1.1_agent_initialization.py  1.1_foundational_models.py  1.1_prompting.py  1.2_tools.py  1.2_web_search.py  1.3_memory.py  1.4_image_data.py  1.4_multi_modal.py  personal_chef.py
module-2/: 2.1_mcp.py  2.1_travel_agent.py  2.2_runtime_context.py  2.2_state.py  2.3_multi_agent.py
module-2/resources/: 2.1_mcp_server.py
module-3/: 3.2_managing_messages.py  3.2_messages.py  3.3_hitl.py
